--- a/css/index.html
+++ b/css/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!--Aulas módulo 2 cap.1-7-->
     <h1>Título</h1>
     <h3>Título</h3>
     <h6>Título</h6>
@@ -31,6 +32,7 @@
     <div class="container">
         <h1>Meu título</h1>
     </div>
-<p>Hoje foi o início de css</p>
+    <!--Aulas módulo 2 cap. 8-->
+ 
 </body>
 </html>
