--- a/css/index.html
+++ b/css/index.html
@@ -33,7 +33,7 @@
         <h1>Meu título</h1>
     </div>
     <!--Aulas módulo 2 cap. 8-->
-   <a href="segunda-pag.html">Segue a página</a>
+   <a href="segunda-pag.html" rel="next" target="self">Segue a página</a>
  
 </body>
 </html>
