--- a/css/index.html
+++ b/css/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprendendo CSS</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="img/new-google-favicon-logo.webp" type="image/x-icon">
 </head>
 <body>
     <!--Aulas módulo 2 cap.1-7-->
@@ -30,10 +31,16 @@
     <hr>
     <img src="img/logo-css100.png" alt="img css">
     <div class="container">
-        <h1>Meu título</h1>
+        <h1>Site para fazer pesquisas</h1>
+         <p><a href="https://www.w3schools.com/default.asp">https://www.w3schools.com/default.asp</a></p>
     </div>
     <!--Aulas módulo 2 cap. 8-->
    <a href="segunda-pag.html" rel="next" target="self">Segue a página</a>
+   <!--Aulas módulo 2 cap.9-->>
+   
+   <div class="circle">
+       
+   </div>
  
 </body>
 </html>
