--- a/css/index.html
+++ b/css/index.html
@@ -34,13 +34,15 @@
         <h1>Site para fazer pesquisas</h1>
          <p><a href="https://www.w3schools.com/default.asp">https://www.w3schools.com/default.asp</a></p>
     </div>
+
     <!--Aulas módulo 2 cap. 8-->
    <a href="segunda-pag.html" rel="next" target="self">Segue a página</a>
+
    <!--Aulas módulo 2 cap.9-->>
    
-   <div class="circle">
-       
-   </div>
+   <div class="circle"></div>
+   <p>Medida absoluta: px (Existem outras pouco usadas)</p>
+   <p>Medidas relativas:em,ex (Existem outras pouco usadas) e %viewport: vw, vh</p>
  
 </body>
 </html>
