--- a/css/index.html
+++ b/css/index.html
@@ -42,7 +42,7 @@
    
    <div class="circle"></div>
    <p>Medida absoluta: px (Existem outras pouco usadas)</p>
-   <p>Medidas relativas:em,ex (Existem outras pouco usadas) e %viewport: vw, vh</p>
+   <p>Medidas relativas:em, rem (Existem outras pouco usadas) e %viewport: vw, vh</p>
  
 </body>
 </html>
