--- a/css/index.html
+++ b/css/index.html
@@ -38,11 +38,13 @@
     <!--Aulas módulo 2 cap. 8-->
    <a href="segunda-pag.html" rel="next" target="self">Segue a página</a>
 
-   <!--Aulas módulo 2 cap.9-->>
+   <!--Aulas módulo 2 cap.9-14-->>
    
    <div class="circle"></div>
    <p>Medida absoluta: px (Existem outras pouco usadas)</p>
    <p>Medidas relativas:em, rem (Existem outras pouco usadas) e %viewport: vw, vh</p>
- 
+
+
+
 </body>
 </html>
