--- a/css/segunda-pag.html
+++ b/css/segunda-pag.html
@@ -8,7 +8,17 @@
     <link rel="stylesheet" href="segunda-pag.css">
 </head>
 <body>
-    <div class="container">Essa é minha página</div>
-    
+       <!--Aulas módulo 2 cap.15-->
+ <h1>Display</h1>
+ <p>É chamado de block</p>
+ <p>Tags p, div, h1... podem ser alteradas no css com o uso de width e heigth</p>
+
+ <span>É chamado de inline</span> 
+ <span>Tags span, div, a....</span> 
+ <span>Essas a borda já ocupa apenas o espaço necessário, e width e heigth não funciona muito bem</span>
+ <br>
+ <div>Minha primeira div</div>
+ <div>Minha segunda div</div>
+ <div>Minha terceira div</div>
 </body>
 </html>
