Estudando display none

--- a/css/index.html
+++ b/css/index.html
@@ -44,6 +44,7 @@
    <p>Medida absoluta: px (Existem outras pouco usadas)</p>
    <p>Medidas relativas:em, rem (Existem outras pouco usadas) e %viewport: vw, vh</p>
 
+   <!--09/05/22 Até a aula 17 concluída-->
 
 
 </body>
