--- a/css/segunda-pag.html
+++ b/css/segunda-pag.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="segunda-pag.css">
 </head>
 <body>
-       <!--Aulas módulo 2 cap.15-->
+       <!--Aulas módulo 2 cap.15-17-->
  <h1>Display</h1>
  <p>É chamado de block</p>
  <p>Tags p, div, h1... podem ser alteradas no css com o uso de width e heigth</p>
@@ -20,5 +20,7 @@
  <div>Minha primeira div</div>
  <div>Minha segunda div</div>
  <div>Minha terceira div</div>
+ <br>
+ <div class="none"></div>
 </body>
 </html>
