--- a/css/index.html
+++ b/css/index.html
@@ -46,6 +46,11 @@
 
    <!--09/05/22 Até a aula 17 concluída-->
 
+<h2>10-05-22</h2>
+<p>Aula 18 assistir outras vezes</p>
+<p>Aula 21 quais extensões no vscode</p>
+
+<h2>Inserindo ícone no input></h2>
 
 </body>
 </html>
