--- a/css/index.html
+++ b/css/index.html
@@ -50,7 +50,8 @@
 <p>Aula 18 assistir outras vezes</p>
 <p>Aula 21 quais extensões no vscode</p>
 
-<h2>Inserindo ícone no input></h2>
+Estudar aula 22
+
 
 </body>
 </html>
