--- a/css/index.html
+++ b/css/index.html
@@ -50,7 +50,7 @@
 <p>Aula 18 assistir outras vezes</p>
 <p>Aula 21 quais extensões no vscode</p>
 
-Estudar aula 22 
+<!--Aula 22 concluída-->
 
 
 </body>
