--- a/exercicio-grid.html
+++ b/exercicio-grid.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício Grid</title>
+    <link rel="stylesheet" href="exercicio-grid.css">
     <script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
     <!-- i data-feather-->
     
-    <div class="container">
-        <div class="iphone-container">
-
-        </div>
-    </div>
+   <div class="iphone-container">
+       <div class="iphone-notch">
+       </div>
+       <div class=""></div>
+   </div>
 </body>
 </html>
